--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/Kehrlann/module-alias-library#readme",
   "dependencies": {
     "module-alias": "^2.2.2"
+  },
+  "_moduleAliases": {
+    "@deep": "src/some/deep"
   }
 }
